syntax = "proto3";

option java_multiple_files = true;
option go_package = "github.com/SourceForgery/tachikoma";
option java_outer_classname = "MTADeliveryNotificationProto";

package com.sourceforgery.tachikoma.mta;

import "google/protobuf/empty.proto";


service MTADeliveryNotifications {
    // Used to tell webserver the latest status of a queued message
    rpc SetDeliveryStatus (DeliveryNotification) returns (google.protobuf.Empty);
}

// Use to signal that there's news about a message status
message DeliveryNotification {
    // The queue_id (same as in MTAQueuedNotification.queueId)
    string queue_id = 101;
    // The origin recipient email address
    string original_recipient = 102;
    // Postfix result code e.g. "2.0.0" for ok (remove the dots to get a code that is
    // SIMILAR to smtp reply codes)
    string status = 105;

    // Optional and freetext
    string diagnose_text = 201;
    string reason = 202;
}