syntax = "proto3";

option java_multiple_files = true;
option go_package = "github.com/SourceForgery/tachikoma";

import "google/protobuf/empty.proto";
option java_outer_classname = "IncomingEmailAddressClass";

package com.sourceforgery.tachikoma.grpc.frontend.incomingemailaddress;

service IncomingEmailAddressService {

    // Returns all incoming e-mail addresses
    rpc GetIncomingEmailAddresses (google.protobuf.Empty) returns (stream IncomingEmailAddress);

    // Add new incoming e-mail address
    rpc AddIncomingEmailAddress (IncomingEmailAddress) returns (google.protobuf.Empty);

    // Delete an incoming e-mail address
    rpc DeleteIncomingEmailAddress (IncomingEmailAddress) returns (google.protobuf.Empty);
}

message IncomingEmailAddress {
    string local_part = 101;
}